feat: Enhanced search with PostgreSQL integration
- Refactor SearchService to use PostgreSQL + InvertedIndex (hybrid)
- Add SearchRequest DTO with pagination (limit, offset)
- Update SearchResult with document, score, matchedTerms, snippet
- Update SearchResponse with metadata (totalResults, searchTimeMs)
- Change SearchController to GET with query parameters (RESTful)
- Add snippet generation with context around matched terms
- Add title boost (30% score increase for title matches)
- Remove old search API and unused endpoint